--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ Flask-Cors==3.0.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pymongo==3.11.0
 python-dotenv==0.14.0
 six==1.15.0
 Werkzeug==1.0.1
